@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ===============================================================================
+    * Werewolf: One bug fix and multiple bullets.
     * Werewolf: Fixed timeout bug.
     * Werewolf: Fixed various warnings.
     * Werewolf: Handful of bugs fixed, timeouts rewritten, wolf assignment
